css/index.css
*{
    margin: 0;
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  scroll-behavior: smooth;
}


body {
    font-family: Arial, Helvetica, sans-serif;
    overflow-x: scroll;
  }

  #myNavbar {
    transition: 0.4s;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 99;
  }

  #myNavbar .navbar-toggler{
    background-color: white;
  }

  #myNavbar .navbar-brand{
    color: white;
  }

  #myNavbar .nav-link{
    color: white;
    font-size: 1.25rem;
    font-weight: 900;
  }

  #navbar #logo {
    font-size: 35px;
    font-weight: bold;
    transition: 0.4s;
  }

  #navbar a:hover {
    background-color: #ddd;
    color: black;
  }

  .active {
    background-color: #4FA9DC;
    color: #e4e4e4 !important;
    border-radius: 5px;
  }

  #navbar-right {
    float: right;
  }

.footer-lower {
}

.footer-lower hr {
  margin: 1rem 0;
  border-color: #fff;
  opacity: 0.05;
}

.social-icons .icon {
  font-size: 1.5rem;
  padding: 10px;
  color: white;
}

.social-icons .icon:hover {
  text-decoration: none;
  color: rgb(168, 168, 230);
}
#aboutUs {
  padding: 3rem 0;
}

.aboutUs__imgSection img{
  width: 100vw;
}
.aboutUs__quote{

}
.aboutUs__quote::after {
  content: "\f10e";
}
.aboutUs__quote::before {
  content: "\f10d";
}

.aboutUs__quote::after,
.aboutUs__quote::before{
  font-family: FontAwesome;
  font-size: 2rem;
  color: #E8E8E8;
}

.aboutUs__underline{
  height: .25rem;
  width: 5rem;
  border-radius: .25rem;
  --bg-opacity: 1;
  background-color: #667eea;
  background-color: rgba(102,126,234,var(--bg-opacity));
  margin-bottom: .25rem;
}

#projects {

  padding: 3rem 1rem;
  height: 500px;
  color: #fff;
  background-color: #673ab7;
}

.equal {
  
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.flex-text {
  flex: 1 1 auto;
}

#getInvolved{
  padding: 3rem 1rem;
}

.inner{
  overflow: hidden;
}

.inner img{
  transition: all 1.5s ease;
}

.inner:hover img{
  transform: scale(1.2);
}

.parallax {
  /* The image used */
  background-image: url("./../assets/images/background.jpg");
  /* Set a specific height */
  min-height: 500px;
  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#contactUs {
  color: #fff;
  background-color: rgb(46, 46, 46);
  padding-bottom: 2vh;
}

.carousel-item img {
  width: inherit;
  height: inherit;
  object-fit: cover;
}

.title-text {
  font-size: 2rem;
}

.footer-lower {
}

.footer-lower hr {
  margin: 1rem 0;
  border-color: #fff;
  opacity: 0.05;
}

.social-icons .icon {
  font-size: 1.5rem;
  padding: 10px;
  color: white;
}

.social-icons .icon:hover {
  text-decoration: none;
  color: rgb(168, 168, 230);
}

.nav-open{
  background-color: #232526 !important;
}

